VaRegion hack (set to disabled by default)

--- a/app/src/main/res/xml/emulation_preferences.xml
+++ b/app/src/main/res/xml/emulation_preferences.xml
@@ -175,6 +175,12 @@
             android:summaryOn="@string/disable_subgroup_shuffle_enabled"
             app:key="disable_subgroup_shuffle"
             app:title="@string/disable_subgroup_shuffle" />
+        <SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:summaryOff="@string/disable_get_va_regions_disabled"
+            android:summaryOn="@string/disable_get_va_regions_enabled"
+            app:key="disable_get_va_regions"
+            app:title="@string/disable_get_va_regions" />
     </PreferenceCategory>
     <PreferenceCategory
         android:key="category_debug"
